package com.example;

public enum Naipe {
    Ouro,
    Espada,
    Copas,
    Paus
}
